--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"chart.js": "^4.4.7",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"chartjs-plugin-annotation": "^3.1.0",
-		"chartjs-plugin-zoom": "^2.2.0"
+		"chartjs-plugin-zoom": "^2.2.0",
+		"tippy.js": "^6.3.7"
 	}
 }
