--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 		"chartjs-plugin-annotation": "^3.1.0",
 		"chartjs-plugin-zoom": "^2.2.0",
 		"flowbite-svelte": "^0.48.4",
+		"postcss": "^8.5.3",
+		"postcss-modules": "^6.0.1",
+		"svelte-preprocess": "^6.0.3",
 		"tippy.js": "^6.3.7"
 	}
 }
