--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"chartjs-plugin-annotation": "^3.1.0",
 		"chartjs-plugin-zoom": "^2.2.0",
+		"flowbite-svelte": "^0.48.4",
 		"tippy.js": "^6.3.7"
 	}
 }
