--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"chartjs-plugin-zoom": "^2.2.0",
 		"d3": "^7.9.0",
 		"flowbite-svelte": "^0.48.4",
-		"tippy.js": "^6.3.7"
+		"tippy.js": "^6.3.7",
+		"virtua": "^0.41.3"
 	}
 }
