Change 4 charts & Move data intro to Intro

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"d3": "^7.9.0",
 		"flowbite-svelte": "^0.48.4",
 		"jsdom": "^26.1.0",
+		"jstat": "^1.9.6",
 		"quill": "^2.0.3",
 		"tippy.js": "^6.3.7",
 		"virtua": "^0.41.3"
