--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/node": "^24.3.1",
 		"svelte": "^5.33.1",
 		"svelte-check": "^4.0.0",
 		"svelte-range-slider-pips": "^3.2.2",
