--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@types/node": "^24.3.1",
+		"@types/papaparse": "^5.5.0",
 		"svelte": "^5.33.1",
 		"svelte-check": "^4.0.0",
 		"svelte-range-slider-pips": "^3.2.2",
