--- a/package.json
+++ b/package.json
@@ -19,21 +19,26 @@
 		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@types/node": "^24.3.1",
+		"@types/node": "^24.10.3",
 		"@types/papaparse": "^5.5.0",
+		"drizzle-kit": "^0.31.8",
 		"svelte": "^5.33.1",
 		"svelte-check": "^4.0.0",
 		"svelte-range-slider-pips": "^3.2.2",
-		"typescript": "^5.0.0",
+		"ts-node": "^10.9.2",
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3",
 		"unplugin-icons": "^22.1.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"better-sqlite3": "^12.5.0",
 		"chart.js": "^4.4.7",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"chartjs-plugin-annotation": "^3.1.0",
 		"chartjs-plugin-zoom": "^2.2.0",
 		"d3": "^7.9.0",
+		"drizzle-orm": "^0.45.1",
 		"flowbite-svelte": "^0.48.4",
 		"jsdom": "^26.1.0",
 		"jstat": "^1.9.6",
