--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"flowbite-svelte": "^0.48.4",
 		"jsdom": "^26.1.0",
 		"jstat": "^1.9.6",
+		"jszip": "^3.10.1",
 		"papaparse": "^5.5.3",
 		"quill": "^2.0.3",
 		"tippy.js": "^6.3.7",
