--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"jszip": "^3.10.1",
 		"papaparse": "^5.5.3",
 		"quill": "^2.0.3",
+		"sql.js": "^1.13.0",
 		"tippy.js": "^6.3.7",
 		"virtua": "^0.41.3"
 	}
